# LearnGlib

./: CMakeLists.txt  README.md  main-use-class.c  main-use-interface.c  main-use-log.c  main_data_encapsulation.c
doc/: Troubleshoot.md
src/DataEncapsulation/: xplan-factory.c  xplan-factory.h
src/UseClass/: xplan-factory.c  xplan-factory.h  xplan-shoe-factory.c  xplan-shoe-factory.h
src/UseInterface/: dev-udisk.c  dev-udisk.h  dev-usb.c  dev-usb.h
